generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id    String @id @default(cuid())
  email String @unique

  authenticationMethod  AuthenticationMethod
  authenticationProfile Json?

  displayName     String?
  name            String?
  avatarUrl       String?
  admin           Boolean           @default(false)
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  deletedAt       DateTime
  OrgMemberInvite OrgMemberInvite[]
  OrgMember       OrgMember[]
}

enum AuthenticationMethod {
  GOOGLE
  MAGIC_LINK
}

model OrgMemberInvite {
  id    String        @id @default(cuid())
  token String        @unique @default(cuid())
  email String
  role  OrgMemberRole @default(MEMBER)

  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  organizationId String

  inviter   User   @relation(fields: [inviterId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  inviterId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([organizationId, email])
}

enum OrgMemberRole {
  ADMIN
  MEMBER
}

model Organization {
  id   String @id @default(cuid())
  slug String @unique

  shopifyOrganizationId  String  @unique
  shopifyPartnerApiToken String  @unique
  description            String?

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  Apps    Apps[]
  members OrgMember[]
  invites OrgMemberInvite[]
}

model OrgMember {
  id String @id @default(cuid())

  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  organizationId String

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String

  role OrgMemberRole @default(MEMBER)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([organizationId, userId])
}

model Apps {
  id   String @id @default(cuid())
  slug String @unique
  name String

  externalRef String @unique

  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  organizationId String

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  version AppVersion @default(V2)

  LeadApps LeadApps[]
}

enum AppVersion {
  V2
  V3
}

model MessageHistory {
  id String @id @default(cuid())
}

model Notes {
  id     String @id @default(cuid())
  leadId String

  Lead Lead @relation(fields: [leadId], references: [id])
}

model Lead {
  id             String     @id @default(cuid())
  shopifyDomain  String     @unique
  shopifyStoreId String     @unique
  noteId         Notes[]
  Apps           LeadApps[]
}

model LeadApps {
  id     String @id @default(cuid())
  leadId String
  appId  String

  Lead Lead @relation(fields: [leadId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  App  Apps @relation(fields: [appId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@unique([appId, leadId])
}

model Contacts {
  id String @id @default(cuid())
}
